# szsoftware_rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: dbg.h  rasterizer.h
src/: command_buffer.c  command_buffer.h  device.c  device.h  index_buffer.c  index_buffer.h  main.c  rasterizer.c  render_target.c  render_target.h  vertex_buffer.c  vertex_buffer.h
